// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`QuickReply - Mobile Snapshots > matches snapshot on mobile viewport 1`] = `
<div
  aria-busy="false"
  class="relative flex"
  data-testid="quick-reply"
>
  <div
    class="-mt-4 w-3 shrink-0"
    data-testid="container"
  >
    <div
      data-testid="quick-reply-connector"
      height="189"
      variant="last"
    />
  </div>
  <div
    class="relative w-full cursor-pointer rounded-md border border-dashed transition-colors duration-200 p-4 border-input"
    data-testid="container"
  >
    <div
      class="flex gap-4 flex-col"
      data-testid="container"
    >
      <div
        data-is-reply="true"
        data-post-id="user:me"
        data-size="normal"
        data-testid="post-header"
      />
      <div
        class="relative"
        data-testid="container"
      >
        <textarea
          aria-haspopup="listbox"
          aria-label="Reply"
          data-testid="quick-reply-textarea"
          maxlength="2000"
          placeholder="What are your thoughts on this?"
          rows="1"
          variant="inline"
        />
      </div>
      <div
        attachments=""
        data-testid="post-input-attachments"
      />
      <div
        data-disabled="false"
        data-post-disabled="true"
        data-testid="post-input-expandable-section"
      >
        <button
          data-testid="quick-reply-submit"
        >
          Submit
        </button>
        <button
          data-testid="quick-reply-image"
        >
          Image
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`QuickReply - Snapshots > matches snapshot with default props 1`] = `
<div
  aria-busy="false"
  class="relative flex"
  data-testid="quick-reply"
>
  <div
    class="-mt-4 w-3 shrink-0"
    data-testid="container"
  >
    <div
      data-testid="quick-reply-connector"
      height="189"
      variant="last"
    />
  </div>
  <div
    class="relative w-full cursor-pointer rounded-md border border-dashed transition-colors duration-200 p-12 border-input"
    data-testid="container"
  >
    <div
      class="flex gap-4 flex-col"
      data-testid="container"
    >
      <div
        data-is-reply="true"
        data-post-id="user:me"
        data-size="large"
        data-testid="post-header"
      />
      <div
        class="relative"
        data-testid="container"
      >
        <textarea
          aria-haspopup="listbox"
          aria-label="Reply"
          class="text-xl leading-7"
          data-testid="quick-reply-textarea"
          maxlength="2000"
          placeholder="What are your thoughts on this?"
          rows="1"
          variant="inline"
        />
      </div>
      <div
        attachments=""
        data-testid="post-input-attachments"
      />
      <div
        data-disabled="false"
        data-post-disabled="true"
        data-testid="post-input-expandable-section"
      >
        <button
          data-testid="quick-reply-submit"
        >
          Submit
        </button>
        <button
          data-testid="quick-reply-image"
        >
          Image
        </button>
      </div>
    </div>
  </div>
</div>
`;
